KeyCloack database migrate to MySQL. Add MySQL init script for 2 db
