# src/main/java/org/nabius/carservice/entity/Maintenance.java
@@ -1,6 +1,7 @@
 package org.nabius.carservice.entity;
 
 import lombok.Data;
+import org.bson.types.ObjectId;
 import org.springframework.data.mongodb.core.mapping.Document;
 import org.springframework.data.mongodb.core.mapping.MongoId;
 
