# src/main/resources/spec/car-service-openapi.yaml
@@ -397,6 +397,9 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
+    ObjectId:
+      type: string
+      pattern: "^[0-9a-fA-F]{24}$"
     FuelType:
       type: string
       enum:
@@ -452,16 +455,12 @@ components:
         lastMaintenanceTimestamp:
           type: string
           format: date-time
-
-
     Maintenance:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
-          readOnly: true
-          example: 10
+          type: string
+          pattern: "^[0-9a-fA-F]{24}$"
         carId:
           type: integer
           format: int64
